test/expected/declare_siv.out
declare x as signed void
        ^
9: error: variable of "void"; did you mean "pointer to void"?
